# SerialMonitor

./: Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  data.rs  main.rs  serial_parser.rs  serial_reader.rs  ui.rs
