[package]
name = "serial_monitor"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["image"] }
egui_plot = "0.27.2"
image = "0.25.1"
rfd = "0.14.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serialport = "4.3.0"
windows = { version = "0.56.0", features = ["Win32_System_Console"] }

[build-dependencies]
winres = "0.1.12"
